--- a/index.html
+++ b/index.html
@@ -13,20 +13,46 @@
 
   <h2>About Me</h2>
   <p>
-    <!-- PASTE your PebblePad “About Me / Overall Reflection” text here -->
-    I am a first-year Data Science major at Michigan Technological University.
-    I am passionate about learning, personal growth, and developing technical
-    skills in programming and data science.
+    My name is Esmeralda “Esme” Falfan Gabriel, and I am a first-year Data Science major at Michigan Technological University. I am passionate about technology, problem-solving, and building a strong foundation in information systems and data analysis.
+    <br><br>
+    Before coming to Michigan Tech, I gained valuable real-world experience working in customer-facing roles where I learned communication, multitasking, teamwork, and handling responsibilities under pressure. These experiences strengthened my work ethic and shaped my interest in pursuing a career in IT and technology.
+    <br><br>
+    I am committed to growing professionally, taking on leadership opportunities, and expanding my skills as I work toward a future in data science, cybersecurity, or information technology.
   </p>
 
   <h2>Skills</h2>
   <ul>
-    <!-- ADAPT from PebblePad -->
-    <li>Git & GitHub</li>
-    <li>Linux & Bash</li>
-    <li>Java</li>
-    <li>Intro Data Science</li>
+    <li>Communication</li>
+    <li>Customer Service</li>
+    <li>Problem Solving</li>
+    <li>Troubleshooting</li>
+    <li>Multitasking</li>
+    <li>Teamwork</li>
   </ul>
+
+  <h2>Technical Background</h2>
+  <ul>
+    <li>Networking & Cybersecurity coursework (KCTC)</li>
+    <li>Intro to Computer Programming & Computer Science (Dual Enrollment)</li>
+    <li>Microsoft Office Specialist: PowerPoint (2019)</li>
+    <li>Professional Business Communications</li>
+    <li>CompTIA Tech+ Certification</li>
+  </ul>
+
+  <h2>Technical Learning & Exploration</h2>
+  <p>
+    I am actively developing my programming, analytical, and problem-solving skills through coursework in computer science and data science.
+  </p>
+
+  <h3>Cybersecurity & Networking Foundations</h3>
+  <p>
+    Through KCTC, I began exploring IT systems, network configuration, troubleshooting, and security concepts, areas that continue to guide my academic interests.
+  </p>
+
+  <h3>Professional Growth</h3>
+  <p>
+    My work experience has strengthened my communication, adaptability, and leadership potential, preparing me for future opportunities in the tech industry.
+  </p>
 
   <h2>Education</h2>
   <p>
@@ -54,7 +80,8 @@
   <h2>Contact</h2>
   <p>
     Email: <a href="mailto:erfalfan@mtu.edu">erfalfan@mtu.edu</a><br>
-    GitHub: <a href="https://github.com/falfane">https://github.com/falfane</a>
+    GitHub: <a href="https://github.com/falfane">https://github.com/falfane</a><br>
+    LinkedIn: <a href="https://www.linkedin.com/in/esmeralda-f-742355332/" target="_blank">View my LinkedIn</a>
   </p>
 
 </body>
