Add headshot image to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <h1>Esmeralda (Esme) Falfan Gabriel</h1>
   <p>Data Science Major | Michigan Technological University</p>
-
+  <img src="headshot.jpg" width="200">
   <hr>
 
   <h2>About Me</h2>
