Update resume download link in index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <h2>Resume</h2>
   <p>
-    <a href="Esmeralda_Falfan_Gabriel_Resume.pdf" download>
+      <a href="Esmeralda_Falfan_Resume.pdf" download>
       Download my resume (PDF)
     </a>
   </p>
